Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Current svn repository
======================

 o #14916 Admin-commands: Removed deprecated getNumSubscriptions and getSubscriptionList

 o #14914 Refactored common CORBA classes to org.xmlBlaster.util package

 o #14909 Cluster fixes
   - Setting retries=-1 as a default for remote cluster login
   - Default is now to not disconnect at the remote clusters during shutdown
     The old behavior can be forced by adding a <diconnect/> tag.
   - Bugfix to not forward the '__persistenceId' marker client property from subscribeQos to the remote node
   - Fixed cluster example: Added SubscriptionPersistencePlugin to xmlBlasterPlugins.xml

 o #14874 - #14876 Added XmlBlasterException hook to react customized on XmlBlasterExceptions
   The default implementation (see Main.java) does an immediate exit of xmlBlaster for error codes 
   defined, for example "-xmlBlaster/panicErrorCodes resource.db.unknown,resource.db.unavailable"
   The exit does not shutdown with the RunlevelManager but kills the instance immediately.
   You can add your own hook implementation (here MyHandler.java) with
     java -Dorg.xmlBlaster.util.I_XmlBlasterExceptionHandler=MyHandler org.xmlBlaster.Main
   -Changed to load signal catcher already in HALTED_POST

 o #14867 Added SocketGetter to the contrib package.

 o #14845 Removed jutils completely, if you have used org.jutils code in your clients
   please port it, for some time you can download jutils.jar from
   http://www.xmlBlaster.org/jutils.jar
   The XML dump shows some timestamps now in ISO_8601 format.

 o #14840 Renamed engine.Global to engine.ServerScope
   This is an incompatible change which touches low level native plugins only

 o #14812 - #14839 Incompatible changes from jutils logging to java.util logging. 
   see helper script xmlBlaster/bin/convertJutilsToJavaLogging.sh
